RIB-177: refactor rating repo to return results only for not deleted criteria